--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "react-player": "^2.9.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-animation-delay": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
