--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@react-hook/mouse-position": "^4.1.3",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
