--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@react-hook/mouse-position": "^4.1.3",
+    "apollo-client": "^2.6.10",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
     "locomotive-scroll": "^4.1.4",
