--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
   "dependencies": {
     "@apollo/client": "^3.5.10",
     "@react-hook/mouse-position": "^4.1.3",
+    "@stripe/stripe-js": "^1.25.0",
     "apollo-client": "^2.6.10",
+    "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
     "locomotive-scroll": "^4.1.4",
     "magic-hover": "^1.0.5",
     "next": "12.1.0",
+    "next-stripe": "^1.0.0-beta.9",
+    "node-fetch": "^3.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
     "react-player": "^2.9.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss-animation-delay": "^1.0.7"
+    "tailwindcss-animation-delay": "^1.0.7",
+    "uuid": "^8.3.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
