--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
     "react-player": "^2.9.0",
+    "react-whatsapp-widget": "^1.3.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animation-delay": "^1.0.7",
     "uuid": "^8.3.2",
