--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "^3.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-facebook-pixel": "^1.0.4",
     "react-intersection-observer": "^8.33.1",
     "react-player": "^2.9.0",
     "react-whatsapp-widget": "^1.3.1",
