--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-stripe": "^1.0.0-beta.9",
     "node-fetch": "^3.2.3",
     "react": "17.0.2",
+    "react-cookie-consent": "^7.4.1",
     "react-dom": "17.0.2",
     "react-facebook-pixel": "^1.0.4",
     "react-intersection-observer": "^8.33.1",
