--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
     "locomotive-scroll": "^4.1.4",
+    "lodash": "^4.17.21",
     "next": "12.1.0",
     "next-stripe": "^1.0.0-beta.9",
     "node-fetch": "^3.2.3",
